[gd_scene load_steps=2 format=3 uid="uid://30oh73qrft4o"]

[ext_resource type="Script" uid="uid://cbdq8gqx6wuuv" path="res://Scenes/Shared/SourcingPopup.gd" id="1_7jnev"]

[node name="SourcingPopup" type="Popup"]
size = Vector2i(184, 101)
visible = true
script = ExtResource("1_7jnev")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="EngineerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Engineering"

[node name="HRButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "HR"

[node name="MaintenanceButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Maintenance"

[node name="CloseButton" type="Button" parent="."]
offset_left = 134.0
offset_top = 31.0
offset_right = 184.0
offset_bottom = 62.0
text = "Close"
